services-and-networking/2-nginx-admins-to-others-network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: nginx-admins-to-others
  namespace: default
spec:
  podSelector:
    matchLabels:
      app: nginx-admins
  policyTypes:
  - Egress
  egress:
  - to:
    - podSelector:
        matchLabels:
          app: nginx-secure
    - podSelector:
        matchLabels:
          app: nginx-operators
    - podSelector:
        matchLabels:
          app: nginx-admins
